Fixed mobile layout. Portfolio and individual project list was too wide for small screen. Caused horizontal scrolling.

--- a/src/components/portfolio/portfolio.module.css
+++ b/src/components/portfolio/portfolio.module.css
@@ -62,3 +62,15 @@
     word-wrap: break-word;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .indent {
+    max-width: 200px;
+  }
+}
+
+@media screen and (max-width: 372px) {
+  .indent {
+    max-width: 180px;
+  }
+}
